--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="row d-flex">
             <div class="col-md pr-4 d-flex topper align-items-center">
               <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-              <span class="text">+ 1235 2355 98</span>
+              <span class="text">+91 829 111 9554</span>
             </div>
             <div class="col-md pr-4 d-flex topper align-items-center">
               <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
@@ -169,12 +169,12 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url(images/category-1.jpg);">
+              <div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url(images/feta1.jpg);">
                 <div class="text px-3 py-1">
                   <h2 class="mb-0" style="font-size:0.8rem;"><a href="#">Feta Cheese with Goat & Sheep Milk</a></h2>
                 </div>
               </div>
-              <div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/category-2.jpg);">
+              <div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/feta2.png);">
                 <div class="text px-3 py-1">
                   <h2 class="mb-0" style="font-size:0.8rem;"><a href="#">White cheese with 100% goat milk</a></h2>
                 </div>
@@ -184,12 +184,12 @@
         </div>
 
         <div class="col-md-4">
-          <div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url(images/category-3.jpg);">
+          <div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url(images/feta3.jpg);">
             <div class="text px-3 py-1">
               <h2 class="mb-0" style="font-size:0.8rem;"><a href="#">White cheese with 100% cow milk</a></h2>
             </div>
           </div>
-          <div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/category-4.jpg);">
+          <div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/feta4.jpg);">
             <div class="text px-3 py-1">
               <h2 class="mb-0" style="font-size:0.8rem;"><a href="#">White cheese with cow milk proteins</a></h2>
             </div>
@@ -424,8 +424,7 @@ length of our collection.</p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy; <script>
               document.write(new Date().getFullYear());
-            </script> All rights reserved | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://joydeeproni.com" target="_blank">Jd.S</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </script> All rights reserved | 3T Brokers LLP
           </p>
         </div>
       </div>
