--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
 
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
 
@@ -28,6 +31,7 @@
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/e83c1413a8.js"></script>
 </head>
 
 <body class="goto-here">
@@ -37,11 +41,11 @@
         <div class="col-lg-12 d-block">
           <div class="row d-flex">
             <div class="col-md pr-4 d-flex topper align-items-center">
-              <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
+              <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="fas fa-phone-alt"></span></div>
               <span class="text">+91 829 111 9554</span>
             </div>
             <div class="col-md pr-4 d-flex topper align-items-center">
-              <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
+              <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="fas fa-envelope"></span></div>
               <span class="text">3tbrokers@gmail.com</span>
             </div>
             <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
@@ -361,7 +365,7 @@ length of our collection.</p>
       <div class="row">
         <div class="mouse">
           <a href="#" class="mouse-icon">
-            <div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
+            <div class="mouse-wheel"><span class="fas fa-chevron-up"></span></div>
           </a>
         </div>
       </div>
@@ -371,8 +375,8 @@ length of our collection.</p>
             <h2 class="ftco-heading-2">3T BROKERS LLP</h2>
             <p style="padding-right:6rem;">is an Indian company with Greek interest located in Mumbai India. We are currently looking to expand our cooperation with subagents in India for both importing and exporting products.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-              <li class="ftco-animate"><a href="tel:+306932956447"><span class="icon-whatsapp"></span></a></li>
-              <li class="ftco-animate"><a href="mailto:3tbrokers@gmail.com"><span class="icon-envelope"></span></a></li>
+              <li class="ftco-animate"><a href="tel:+306932956447"><span class="fab fa-whatsapp-square"></span></a></li>
+              <li class="ftco-animate"><a href="mailto:3tbrokers@gmail.com"><span class="fas fa-envelope"></span></a></li>
             </ul>
           </div>
         </div>
@@ -409,9 +413,9 @@ length of our collection.</p>
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><a href="#"><span class="icon icon-map-marker"></span><span class="text">C402, Rajeshree Building, Deolwadi, Chakala, Andheri [E], Mumbai</span></a></li>
-                <li><a href="tel:+91 829 111 9554"><span class="icon icon-phone"></span><span class="text">+30 6932 956447 (WhatsApp), +91 829 111 9554 (Call)</span></a></li>
-                <li><a href="mailto:3tbrokers@gmail.com"><span class="icon icon-envelope"></span><span class="text">3tbrokers@gmail.com</span></a></li>
+                <li><a href="#"><i class="fas fa-map-marker-alt" style="padding-right:1.5rem;"></i><span class="text">C402, Rajeshree Building, Deolwadi, Chakala, Andheri [E], Mumbai</span></a></li>
+                <li><a href="tel:+91 829 111 9554"><i class="fas fa-phone-alt" style="padding-right:1.5rem;"></i><span class="text">+30 6932 956447 (WhatsApp), +91 829 111 9554 (Call)</span></a></li>
+                <li><a href="mailto:3tbrokers@gmail.com"><i class="fas fa-envelope" style="padding-right:1.5rem;"></i><span class="text">3tbrokers@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
