--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
           <div class="media block-6 services mb-md-0 mb-4">
             <div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
-              <span class="flaticon-shipped"></span>
+              <span class="fas fa-handshake"></span>
             </div>
             <div class="media-body">
               <h3 class="heading">Expansion Plans</h3>
@@ -124,7 +124,7 @@
         <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
           <div class="media block-6 services mb-md-0 mb-4">
             <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
-              <span class="flaticon-diet"></span>
+              <span class="fas fa-seedling"></span>
             </div>
             <div class="media-body">
               <h3 class="heading">Always Fresh</h3>
@@ -135,7 +135,7 @@
         <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
           <div class="media block-6 services mb-md-0 mb-4">
             <div class="icon bg-color-3 d-flex justify-content-center align-items-center mb-2">
-              <span class="flaticon-award"></span>
+              <span class="fas fa-award"></span>
             </div>
             <div class="media-body">
               <h3 class="heading">Superior Quality</h3>
@@ -146,7 +146,7 @@
         <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
           <div class="media block-6 services mb-md-0 mb-4">
             <div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
-              <span class="flaticon-customer-service"></span>
+              <span class="fas fa-star-of-david"></span>
             </div>
             <div class="media-body">
               <h3 class="heading">Euro Connection</h3>
