--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-sm-12 ftco-animate text-center">
-              <h1 class="mb-2">100% Fresh &amp; Organic Foods</h1>
+              <h1 class="mb-2">Export &amp; Import From Europe</h1>
               <h2 class="subheading mb-4">Exporting a variety of Indian products all over Europe.</h2>
               <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
             </div>
@@ -127,8 +127,8 @@
               <span class="fas fa-seedling"></span>
             </div>
             <div class="media-body">
-              <h3 class="heading">Always Fresh</h3>
-              <span>Product well package</span>
+              <h3 class="heading">Export Import</h3>
+              <span>Looking for products from India</span>
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
             </div>
             <div class="media-body">
               <h3 class="heading">Superior Quality</h3>
-              <span>Quality Products</span>
+              <span>Fresh & High Quality Assurance</span>
             </div>
           </div>
         </div>
