--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
             <div class="col-md-12 d-flex ftco-animate">
               <div class="blog-entry align-self-stretch d-md-flex">
-                <a href="#" class="block-20" style="background-image: url('images/image_1.jpg');">
+                <a href="#" class="block-20" style="background-image: url('images/syrup.jpg');">
                 </a>
                 <div class="text d-block pl-md-4">
                   <h3 class="heading"><a href="#">Fruit in Syrup</a></h3>
