--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-md-12 ftco-animate text-center">
-              <h1 class="mb-2">European Agro Products</h1>
+              <h1 class="mb-2">European Food Products</h1>
               <h2 class="subheading mb-4">Importing and disrupting in the Indian market high-quality agricultural European products.<h2>
                   <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
             </div>
@@ -96,7 +96,7 @@
           <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-sm-12 ftco-animate text-center">
-              <h1 class="mb-2">Export &amp; Import From Europe</h1>
+              <h1 class="mb-2">Export &amp; Import From India</h1>
               <h2 class="subheading mb-4">Exporting a variety of Indian products all over Europe.</h2>
               <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
             </div>
@@ -146,7 +146,7 @@
         <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
           <div class="media block-6 services mb-md-0 mb-4">
             <div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
-              <span class="fas fa-star-of-david"></span>
+              <span class="fas fa-heart"></span>
             </div>
             <div class="media-body">
               <h3 class="heading">Euro Connection</h3>
