--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="goto-here">
-  <div class="py-1 bg-primary">
+  <div class="py-1 bg-primary" id="top-green">
     <div class="container">
       <div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
         <div class="col-lg-12 d-block">
@@ -65,7 +65,7 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="mailto:3tbrokers@gmail.com" class="nav-link">Contact Us</a></li>
+          <li class="nav-item"><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="nav-link">Contact Us</a></li>
 
         </ul>
       </div>
@@ -83,7 +83,7 @@
             <div class="col-md-12 ftco-animate text-center">
               <h1 class="mb-2">European Food Products</h1>
               <h2 class="subheading mb-4">Importing and disrupting in the Indian market high-quality agricultural European products.<h2>
-                  <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
+                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
             </div>
 
           </div>
@@ -98,12 +98,14 @@
             <div class="col-sm-12 ftco-animate text-center">
               <h1 class="mb-2">Export &amp; Import From India</h1>
               <h2 class="subheading mb-4">Exporting a variety of Indian products all over Europe.</h2>
-              <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
+              <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
             </div>
 
           </div>
         </div>
       </div>
+
+
     </div>
   </section>
 
@@ -168,7 +170,7 @@
                 <div class="text text-center">
                   <h2>Feta Cheese</h2>
                   <p>The famous and well-known Greek Feta Cheese collection</p>
-                  <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary">ENQUIRE</a></p>
+                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -216,7 +218,7 @@
                 <div class="text d-block pl-md-4">
                   <h3 class="heading"><a href="#">Yellow Cheese</a></h3>
                   <p>Yellow cheese with milk. These products are very well-known in Greece and all over Europe with the trade name “kefalotyri” and “Gruyere” Yellow cheese in made by milk proteins, which makes it be vegetarian and ideal for pizza and toast</p>
-                  <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
+                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -228,7 +230,7 @@
                 <div class="text d-block pl-md-4">
                   <h3 class="heading"><a href="#">Vegan Yellow Cheese</a></h3>
                   <p>Vegan Yellow cheese is the ideal suggestion for those who prefer not to eat dairy products. It is 100% dairy free and cholesterol free cheese and can be used all day long from people from all ages. Vegan cheese can also be an excellent choice for those facing problems with lactose intolerance or a true milk protein allergy. It can be consumed as a daily cheese, sliced in toasts and sandwiches as well as pizzas. It can be added in any recipe, in various pasta selections and burgers. You can choose from: <strong>Vegan Gouda Flavour, Vegan Mozzarella Flavor, Vegan Smoked Gouda, Vegan Cheddar Flavor</strong>. All the above cheeses are from a factory North Greece</p>
-                  <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
+                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -242,7 +244,7 @@
                   <p>These agriculture products are from the Greek island of Crete located in the south part of Greece. This island has a great potential regarding the Organic and Natural food and beverage sector, be assured that Cretan products
                     would make a fine addition to your catalog. A small sample of these products are Local natural and organic herbs, extra virgin organic and conventional olive oil, olive oil infusions, olives, mixed spices, olive paste, marmalade
                     with stevia, marmalade with herbs.</p>
-                  <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
+                  <p><a href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -256,7 +258,7 @@
                   <p>When it comes to honey, there are a lot of options in Greece, but we prefer the one comes from the <strong>Island Crete</strong>. The reason is simple, this honey has different taste due to the fact that the Bees boxes are
                     located in the field where these herbs or trees are, so with this way this honey has these natural tastes, There are a lot tastes as, pine thyme honey, woodland sage honey, woodland heath honey, thyme honey, wild herbs honey,
                     orange and lemon honey.</p>
-                  <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
+                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -274,7 +276,7 @@
                     your food’s taste. This factory located south Greece at a city called Messenia.
                     You can find so much types of this vinegar such as, Balsamic Vinegar, White & Black Balsamic
                     pearls, Balsamic Cream with a lot of flavors.</p>
-                    <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
+                    <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -286,7 +288,7 @@
                 <div class="text d-block pl-md-4">
                   <h3 class="heading"><a href="#">Fruit in Syrup</a></h3>
                   <p>It is a Greek factory, from Athens, using only Greek fruit to produce all kind of fruits in syrup, as well as Chestnut jam. <strong>This is a product that everyone has to taste.</strong></p>
-                  <p><a href="mailto:3tbrokers@gmail.com" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
+                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -306,7 +308,7 @@
           <h2 class="mb-4">This was just for start!</h2>
           <p>This was just a small sample of products being traded by us. We would love to show you full
 length of our collection.</p>
-          <h3><a href="mailto:3tbrokers@gmail.com">Contact Us Now</a></h3>
+          <h3><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9">Contact Us Now</a></h3>
           <span class="price"><a href="tel:8291119554">+91 829 111 9554</a></span>
           <!-- <div id="timer" class="d-flex mt-5">
             <div class="time" id="days"></div>
@@ -376,7 +378,7 @@ length of our collection.</p>
             <p style="padding-right:6rem;">is an Indian company with Greek interest located in Mumbai India. We are currently looking to expand our cooperation with subagents in India for both importing and exporting products.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               <li class="ftco-animate"><a href="tel:+306932956447"><span class="fab fa-whatsapp-square"></span></a></li>
-              <li class="ftco-animate"><a href="mailto:3tbrokers@gmail.com"><span class="fas fa-envelope"></span></a></li>
+              <li class="ftco-animate"><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9"><span class="fas fa-envelope"></span></a></li>
             </ul>
           </div>
         </div>
@@ -415,7 +417,7 @@ length of our collection.</p>
               <ul>
                 <li><a href="#"><i class="fas fa-map-marker-alt" style="padding-right:1.5rem;"></i><span class="text">C402, Rajeshree Building, Deolwadi, Chakala, Andheri [E], Mumbai</span></a></li>
                 <li><a href="tel:+91 829 111 9554"><i class="fas fa-phone-alt" style="padding-right:1.5rem;"></i><span class="text">+30 6932 956447 (WhatsApp), +91 829 111 9554 (Call)</span></a></li>
-                <li><a href="mailto:3tbrokers@gmail.com"><i class="fas fa-envelope" style="padding-right:1.5rem;"></i><span class="text">3tbrokers@gmail.com</span></a></li>
+                <li><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9"><i class="fas fa-envelope" style="padding-right:1.5rem;"></i><span class="text">3tbrokers@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
