--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="goto-here">
-  <div class="py-1 bg-primary" id="top-green">
+  <div class="py-1 bg-primary" id="#top-green">
     <div class="container">
       <div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
         <div class="col-lg-12 d-block">
@@ -83,7 +83,7 @@
             <div class="col-md-12 ftco-animate text-center">
               <h1 class="mb-2">European Food Products</h1>
               <h2 class="subheading mb-4">Importing and disrupting in the Indian market high-quality agricultural European products.<h2>
-                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
+                  <p><a href="#value-props" class="btn btn-primary">SCROLL TO LEARN MORE</a></p>
             </div>
 
           </div>
@@ -98,7 +98,7 @@
             <div class="col-sm-12 ftco-animate text-center">
               <h1 class="mb-2">Export &amp; Import From India</h1>
               <h2 class="subheading mb-4">Exporting a variety of Indian products all over Europe.</h2>
-              <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
+              <p><a href="#value-props" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
             </div>
 
           </div>
@@ -109,7 +109,7 @@
     </div>
   </section>
 
-  <section class="ftco-section">
+  <section class="ftco-section" id="value-props">
     <div class="container">
       <div class="row no-gutters ftco-services">
         <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
