--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="col-sm-12 ftco-animate text-center">
               <h1 class="mb-2">Export &amp; Import From India</h1>
               <h2 class="subheading mb-4">Exporting a variety of Indian products all over Europe.</h2>
-              <p><a href="#value-props" class="btn btn-primary">REACH OUT TO LEARN MORE</a></p>
+              <p><a href="#value-props" class="btn btn-primary">SCROLL TO LEARN MORE</a></p>
             </div>
 
           </div>
