added google analytics

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
 
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
 
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -32,6 +32,17 @@
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/e83c1413a8.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147090698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-147090698-1');
+</script>
+
 </head>
 
 <body class="goto-here">
@@ -217,7 +228,8 @@
                 </a>
                 <div class="text d-block pl-md-4">
                   <h3 class="heading"><a href="#">Yellow Cheese</a></h3>
-                  <p>Yellow cheese with milk. These products are very well-known in Greece and all over Europe with the trade name “kefalotyri” and “Gruyere” Yellow cheese in made by milk proteins, which makes it be vegetarian and ideal for pizza and toast</p>
+                  <p>Yellow cheese with milk. These products are very well-known in Greece and all over Europe with the trade name “kefalotyri” and “Gruyere” Yellow cheese in made by milk proteins, which makes it be vegetarian and ideal for pizza
+                    and toast</p>
                   <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
@@ -229,7 +241,9 @@
                 </a>
                 <div class="text d-block pl-md-4">
                   <h3 class="heading"><a href="#">Vegan Yellow Cheese</a></h3>
-                  <p>Vegan Yellow cheese is the ideal suggestion for those who prefer not to eat dairy products. It is 100% dairy free and cholesterol free cheese and can be used all day long from people from all ages. Vegan cheese can also be an excellent choice for those facing problems with lactose intolerance or a true milk protein allergy. It can be consumed as a daily cheese, sliced in toasts and sandwiches as well as pizzas. It can be added in any recipe, in various pasta selections and burgers. You can choose from: <strong>Vegan Gouda Flavour, Vegan Mozzarella Flavor, Vegan Smoked Gouda, Vegan Cheddar Flavor</strong>. All the above cheeses are from a factory North Greece</p>
+                  <p>Vegan Yellow cheese is the ideal suggestion for those who prefer not to eat dairy products. It is 100% dairy free and cholesterol free cheese and can be used all day long from people from all ages. Vegan cheese can also be an
+                    excellent choice for those facing problems with lactose intolerance or a true milk protein allergy. It can be consumed as a daily cheese, sliced in toasts and sandwiches as well as pizzas. It can be added in any recipe, in
+                    various pasta selections and burgers. You can choose from: <strong>Vegan Gouda Flavour, Vegan Mozzarella Flavor, Vegan Smoked Gouda, Vegan Cheddar Flavor</strong>. All the above cheeses are from a factory North Greece</p>
                   <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
@@ -276,7 +290,7 @@
                     your food’s taste. This factory located south Greece at a city called Messenia.
                     You can find so much types of this vinegar such as, Balsamic Vinegar, White & Black Balsamic
                     pearls, Balsamic Cream with a lot of flavors.</p>
-                    <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
+                  <p><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9" class="btn btn-primary py-2 px-3">ENQUIRE</a></p>
                 </div>
               </div>
             </div>
@@ -307,7 +321,7 @@
           <span class="subheading">More Coming Soon</span>
           <h2 class="mb-4">This was just for start!</h2>
           <p>This was just a small sample of products being traded by us. We would love to show you full
-length of our collection.</p>
+            length of our collection.</p>
           <h3><a target="_blank" href="https://forms.gle/JCRhPM9CZLDSGTFj9">Contact Us Now</a></h3>
           <span class="price"><a href="tel:8291119554">+91 829 111 9554</a></span>
           <!-- <div id="timer" class="d-flex mt-5">
